--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.19.2",
     "cors": "^2.8.5",
     "express": "^4.17.3",
+    "https-proxy-agent": "^5.0.0",
     "mongoose": "^6.2.6",
     "node": "^17.7.1",
     "nodemon": "^2.0.15",
