--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "nodemon":"nodemon server.js"
+    "nodemon": "nodemon server.js"
   },
   "private": true,
   "dependencies": {
@@ -28,6 +28,7 @@
     "express-fileupload": "^1.3.1",
     "https-proxy-agent": "^5.0.0",
     "mongoose": "^6.2.6",
+    "multer": "^1.4.4",
     "node": "^17.7.1",
     "nodemon": "^2.0.15",
     "rxjs": "~7.5.0",
