--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve & node server.js",
+    "start": "ng serve & nodemon server.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "nodemon":"nodemon server.js"
   },
   "private": true,
   "dependencies": {
@@ -21,8 +22,10 @@
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
     "body-parser": "^1.19.2",
+    "cloudinary": "^1.29.0",
     "cors": "^2.8.5",
     "express": "^4.17.3",
+    "express-fileupload": "^1.3.1",
     "https-proxy-agent": "^5.0.0",
     "mongoose": "^6.2.6",
     "node": "^17.7.1",
