--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.17.3",
     "express-fileupload": "^1.3.1",
     "https-proxy-agent": "^5.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.6",
     "multer": "^1.4.4",
     "node": "^17.7.1",
