--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "bcrpyt": "^2.0.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.2",
     "cloudinary": "^1.29.0",
