--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@angular-devkit/build-angular": "^13.2.6",
     "@angular/cli": "~13.2.5",
     "@angular/compiler-cli": "~13.2.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
@@ -53,4 +54,5 @@
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.5.2"
   }
+  
 }
