--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.2",
-    "cloudinary": "^1.29.0",
+    "cloudinary": "^1.30.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.17.3",
     "express-fileupload": "^1.3.1",
     "https-proxy-agent": "^5.0.0",
