--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.6",
-    "multer": "^1.4.4"
+    "multer": "^1.4.4",
+    "cloudinary": "^1.30.0"
   }
 }
